# pulse

./: .clang-format  .clang_complete  .cocos-project.json  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  install_libs.sh
Classes/: AppDelegate.cpp  HelloWorldScene.cpp  HelloWorldScene.h
include/cpputils/: cpputils.hpp  deque.hpp  forward_list.hpp  list.hpp  optional.hpp  vector.hpp
include/rdl/: array.hpp  deque.hpp  forward_list.hpp  list.hpp  map.hpp  optional.hpp  pair.hpp  queue.hpp  rdl.hpp  set.hpp  stack.hpp  string.hpp  tuple.hpp  vector.hpp
libs/: install_libs.sh
patch/: constexpr.patch  fix_quadcommand_crash.patch  paused_animation_interval.patch  realloc_crash.patch  scale_sprite_frame.patch  static_analyser_warnings.patch
proj.android/: AndroidManifest.xml
proj.android-studio/: .gitignore  build-cfg.json  settings.gradle
proj.android-studio/app/: AndroidManifest.xml  build.gradle  local.properties
proj.android-studio/app/jni/: Android.mk  Application.mk
proj.android-studio/app/jni/bootstrap/: main.cpp
proj.android-studio/app/jni/hellocpp/: main.cpp
proj.android-studio/app/src/org/cocos2dx/cpp/: AppActivity.java
proj.android-studio/gradle/wrapper/: gradle-wrapper.properties
proj.ios_mac/FlappyBird-mobile/Images.xcassets/BrandAssets.imageset/: Contents.json
proj.ios_mac/FlappyBird-mobile/Images.xcassets/LaunchImage.launchimage/: Contents.json
proj.ios_mac/FlappyBird.xcodeproj/: project.pbxproj
proj.ios_mac/Pulse.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: AppController.h  AppController.mm  Info.plist  RootViewController.h  RootViewController.mm  main.m
proj.ios_mac/ios/assets/Images.xcassets/AppIcon.appiconset/: Contents.json
proj.ios_mac/ios/assets/Images.xcassets/Brand Assets.launchimage/: Contents.json
proj.ios_mac/mac/: Info.plist  main.cpp
proj.win10/: FlappyBird.sln
proj.win10/App/: FlappyBird.vcxproj  FlappyBird.vcxproj.filters  Package.appxmanifest
proj.win32/: FlappyBird.sln
proj.win8.1-universal/: FlappyBird.sln
proj.win8.1-universal/App.Shared/: FlappyBird.Shared.vcxitems
proj.win8.1-universal/App.Windows/: FlappyBird.Windows.vcxproj  Package.appxmanifest
proj.win8.1-universal/App.WindowsPhone/: FlappyBird.WindowsPhone.vcxproj  Package.appxmanifest
resources/animations/: background.c3b  title.c3b  title.fbx
resources/animations/splash/: tandem_intro.plist  tandem_intro_spritesheet.plist
resources/images/background/: Background.c3b
resources/images/extra_large/: banner.plist  buttons.plist  digits.plist  letters.plist  menu.plist
resources/images/large/: banner.plist  buttons.plist  digits.plist  letters.plist  menu.plist
resources/images/medium/: banner.plist  buttons.plist  digits.plist  letters.plist  menu.plist
resources/images/small/: banner.plist  buttons.plist  digits.plist  letters.plist  menu.plist
resources/particles/: ambient_sparkles.plist  background_sparkles.plist  button_sparkles.plist  obstacle_indicator_bottom.plist  obstacle_indicator_left.plist  obstacle_indicator_right.plist  obstacle_indicator_top.plist  player_trail.plist  pulse_began.plist  pulse_ended.plist
src/flappy/: AppDelegate.cpp  AppDelegate.h
src/flappy/generators/: Generator.hpp  ObstacleGenerator.cpp  ObstacleGenerator.hpp
src/flappy/models/: Accelerometer.hpp  GameOptions.hpp  GameState.hpp  TimeScale.hpp
src/flappy/scenes/: DeveloperMenuScene.cpp  DeveloperMenuScene.hpp  FlappyBirdScene.cpp  FlappyBirdScene.hpp  GameScene.cpp  GameScene.hpp  HelloWorldScene.cpp  HelloWorldScene.hpp  SplashScene.cpp  SplashScene.hpp
src/flappy/sprites/: Column.cpp  Column.hpp  FlappyBird.cpp  FlappyBird.hpp  Obstacle.cpp  Obstacle.hpp  ObstaclePhysicsBody.cpp  ObstaclePhysicsBody.hpp  SpritePhysicsBody.cpp  SpritePhysicsBody.hpp  SpriteTag.hpp  column.cpp
src/flappy/ui/: Font.hpp  MenuSlider.cpp  MenuSlider.hpp
src/flappy/utilities/: Direction.hpp  Geometry.hpp  Logger.hpp  Physics.hpp  Random.hpp  Rotation.hpp  geometry.hpp
src/pulse/: AppDelegate.cpp  AppDelegate.hpp
src/pulse/2d/: Direction.hpp  Geometry.hpp  Position.hpp  Rotation.hpp
src/pulse/actions/: AnimatedBackground.cpp  AnimatedBackground.hpp  CallbackAfter.hpp  FollowedBy.cpp  FollowedBy.hpp  ObstacleSequence.cpp  ObstacleSequence.hpp  RemoveSelfWithCallback.cpp  RemoveSelfWithCallback.hpp  SequenceBuilder.hpp
src/pulse/controllers/: SplashViewController.cpp  SplashViewController.hpp  ViewController.hpp
src/pulse/extensions/: Animate.hpp  Node.hpp  Optional.hpp  Rect.hpp  Ref.hpp  Vec.hpp  Vector.hpp
src/pulse/generators/: Generator.hpp  ObstacleGenerator.cpp  ObstacleGenerator.hpp
src/pulse/models/: Accelerometer.hpp  GameMode.hpp  GameOptions.hpp  GameState.cpp  GameState.hpp  Resolution.cpp  Resolution.hpp  TimeScale.hpp
src/pulse/movement/: AccelerometerMovementSystem.cpp  AccelerometerMovementSystem.hpp  MovementSystem.hpp
src/pulse/scenes/: BaseScene.cpp  BaseScene.hpp  DeveloperMenuScene.cpp  DeveloperMenuScene.hpp  GameOverScene.cpp  GameOverScene.hpp  GameScene.cpp  GameScene.hpp  InGameMenuScene.cpp  InGameMenuScene.hpp  ModeSelectionScene.cpp  ModeSelectionScene.hpp  PauseMenuScene.cpp  PauseMenuScene.hpp  PhysicsScene.cpp  PhysicsScene.hpp  PulseGameScene.cpp  PulseGameScene.hpp  SplashScene.cpp  SplashScene.hpp  TitleScene.cpp  TitleScene.hpp
src/pulse/sprites/: Column.cpp  Column.hpp  MirrorSprite.cpp  MirrorSprite.hpp  Obstacle.cpp  Obstacle.hpp  ObstacleIndicator.cpp  ObstacleIndicator.hpp  ObstaclePhysicsBody.cpp  ObstaclePhysicsBody.hpp  Player.cpp  Player.hpp  Pulse.cpp  Pulse.hpp  Score.cpp  Score.hpp  SpritePhysicsBody.cpp  SpritePhysicsBody.hpp  WrappedSprite.cpp  WrappedSprite.hpp
src/pulse/ui/: Button.cpp  Button.hpp  Colour.hpp  Font.hpp  MenuSlider.cpp  MenuSlider.hpp  Resources.hpp  resources.hpp
src/pulse/utilities/: Acceleration.hpp  Callback.hpp  Direction.hpp  Geometry.hpp  Logger.hpp  NodeAnimator.hpp  Physics.hpp  Position.hpp  Random.hpp  Rect.hpp  Rotation.hpp  TextureAllocator.hpp
src/pulse/views/: SplashView.cpp  SplashView.hpp  View.cpp  View.hpp
